This file documents the revision history for the Monitoring Webinterface Thruk.


0.60    Thu May  6 19:32:14 CEST 2010
          - fixed problem with sending command in IE
          - fixed problem with reseting pager on filter change
          - fixed problem with multiple filters and paging

0.58    Mon Apr 12 16:30:40 CEST 2010
          - changed to FCGI::ProcManager::MaxRequests
            as temporary workaround for memory leaking problems
          - fixed javascript issues with safari and opera
          - fixed adding persistent comments from status.cgi

0.56    Fri Apr  9 08:58:43 CEST 2010
          - fixed host acknowledgements
          - fixed problem with date filter in status.cgi
          - fixed host soft/hard state display
          - fixed problem with onmouseover for long plugin output
          - fixed problem with pnp4nagios ssi includes and prototype

0.54    Mon Apr  5 16:37:42 CEST 2010
          - added ajax search to side navigation and status page
          - made eventype for status.cgi popups configurable
          - renamed cgi_cfg option to cgi.cfg
          - fixed removing downtimes
          - fixed removing comments
          - fixed parsing cgi.cfg

0.52    Fri Mar 26 09:03:28 CET 2010
          - added text dates like 'tomorrow' or '-3 weeks' for all date input fields
          - select multiple hosts/services with shift + mouseclick
          - changed to Unicode::Encode for UTF-8 support
          - fixed menu scrollbar
          - fixed nav hider on main.html
          - fixed parsing dates
          - fixed filter combination "livestatus: Cannot combine 2 filters with 'OR': only 0 are on stack"

0.50    Fri Mar 19 20:11:48 CET 2010
          - added next/last check filter
          - backends can be enabled in extinfo 1/2
          - added start_page config option
          - reload counter resets when host/service is selected
          - different date format for today (only HH:MM:SS for example)