@@ -2,6 +2,7 @@ This file documents the revision history for the Monitoring Webinterface Thruk.
 
 
 0.60    Thu May  6 19:32:14 CEST 2010
+          - fixed problem with start_page and absolute uris
           - fixed problem with sending command in IE
           - fixed problem with reseting pager on filter change
           - fixed problem with multiple filters and paging
